--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="./models/character.class.js" defer></script>
     <script src="./models/chicken.class.js" defer></script>
     <script src="./models/world.class.js" defer></script>
+    <script src="./models/level.class.js" defer></script>
+    <script src="./models/levels/level1.js" defer></script>
     <script src="./js/game.js" defer></script>
     
 </head>
