--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>El pollo loco</title>
     <script src="./models/keyboard.class.js" defer></script>
+    <script src="./models/drawable-object.class.js" defer></script>
     <script src="./models/movable-object.class.js" defer></script>
     <script src="./models/background-object.class.js" defer></script>
     <script src="./models/cloud.class.js" defer></script>
@@ -14,6 +15,8 @@
     <script src="./models/world.class.js" defer></script>
     <script src="./models/level.class.js" defer></script>
     <script src="./models/endboss.class.js" defer></script>
+    
+    <script src="./models/statusbar.class.js" defer></script>
     <script src="./models/levels/level1.js" defer></script>
     <script src="./js/game.js" defer></script>
     
