idle and sleeping

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/png" href="img/3_enemies_chicken/chicken_normal/1_walk/1_w.png">
     <title>El pollo loco</title>
     <script src="./models/keyboard.class.js" defer></script>
     <script src="./models/drawable-object.class.js" defer></script>
