--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <script src="./models/keyboard.class.js" defer></script>
     <script src="./models/drawable-object.class.js" defer></script>
     <script src="./models/movable-object.class.js" defer></script>
+    <script src="./models/collectible-item.js" defer></script>
     <script src="./models/background-object.class.js" defer></script>
     <script src="./models/cloud.class.js" defer></script>
     <script src="./models/statusbar.class.js" defer></script>
     <script src="./models/character.class.js" defer></script>
     <script src="./models/chicken.class.js" defer></script>
+    <script src="./models/coin.class.js" defer></script>
     <script src="./models/world.class.js" defer></script>
     <script src="./models/level.class.js" defer></script>
     <script src="./models/throwable-object.class.js" defer></script>
