collect bottles + use them to throw

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./models/character.class.js" defer></script>
     <script src="./models/chicken.class.js" defer></script>
     <script src="./models/coin.class.js" defer></script>
+    <script src="./models/bottle.class.js" defer></script>
     <script src="./models/world.class.js" defer></script>
     <script src="./models/level.class.js" defer></script>
     <script src="./models/throwable-object.class.js" defer></script>
