--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./models/statusbar.class.js" defer></script>
     <script src="./models/character.class.js" defer></script>
     <script src="./models/chicken.class.js" defer></script>
+    <script src="./models/chicken-small.class.js" defer></script>
     <script src="./models/coin.class.js" defer></script>
     <script src="./models/bottle.class.js" defer></script>
     <script src="./models/world.class.js" defer></script>
