--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./models/background-object.class.js" defer></script>
     <script src="./models/cloud.class.js" defer></script>
     <script src="./models/statusbar.class.js" defer></script>
+    <script src="./models/button.class.js" defer></script>
     <script src="./models/character.class.js" defer></script>
     <script src="./models/chicken.class.js" defer></script>
     <script src="./models/chicken-small.class.js" defer></script>
