--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./models/collectible-item.js" defer></script>
     <script src="./models/background-object.class.js" defer></script>
     <script src="./models/cloud.class.js" defer></script>
+    <script src="./models/sounds.class.js" defer></script>
     <script src="./models/statusbar.class.js" defer></script>
     <script src="./models/button.class.js" defer></script>
     <script src="./models/character.class.js" defer></script>
