chicken small jumps

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="./models/bottle.class.js" defer></script>
     <script src="./models/world.class.js" defer></script>
     <script src="./models/level.class.js" defer></script>
+    <script src="./models/endscreen.class.js" defer></script>
     <script src="./models/throwable-object.class.js" defer></script>
     <script src="./models/endboss.class.js" defer></script>
     <!-- <script src="./js/sounds.js" defer></script> -->
