--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
   </head>
   <body >
     <!-- onload="init()" --><!-- onload="startGame()" -->
-
-    <div class="canvas-container">
+    <div id="orientationMessage" style="display: none;">
+      <p>Please rotate your phone to play the game.</p>
+    </div>
+    <div id="canvas-container" class="canvas-container" style="display: flex;">
       <div class="flex flex-column align-center">
         <h1>El pollo loco</h1>
-        <div class="start position-relative" id="start">
-                    <div class="start-container flex ">
+        <div class="start position-relative" id="start" >
+          <img src="img/10_BG/startscreen_1.jpg" alt="">
+              <div class="start-container flex position-absolute">
                 <button onclick="startGame()">Start</button> 
                 <button onclick="openDialog()">Need help?</button>
               </div> 
@@ -131,8 +134,16 @@
             </div>
           </dialog>
         </div>
-        <div id="fullscreen" class="position-relative flex justify-center align-center">
-          <div class="btn-container flex d_none position-absolute" id="btn-container">
+        <div class="endscreen position-relative" id="endscreen" style="display:none">
+          <img src="img/9_intro_outro_screens/game_over/game-over-1.png" alt="">
+              <div class="start-container flex position-absolute">
+                <button onclick="startGame()">Try Again</button> 
+                <button onclick="openDialog()">Menu</button>
+              </div> 
+
+        </div>
+        <div id="fullscreen" class="position-relative justify-center align-center">
+          <div class="btn-container flex position-absolute" id="btn-container">
            
               <button id="toggleSounds" onclick="toggleSounds()">
                 <img src="img/SVG/volume-on.svg" alt="volume-switcher" />
@@ -144,27 +155,28 @@
               </button>
            
           </div>
-          <canvas class="d_none" id="canvas" width="720" height="480"></canvas>
+          <canvas id="canvas" width="720" height="480"></canvas>
+          <div id="mobileBtn-container" class="flex justify-space-between position-absolute">
+            <div class="mobile-btns-left flex">
+              <button data-start="startMovingLeft" data-stop="stopMovingLeft">
+                <img src="img/SVG/arrow-left.svg" alt="">
+              </button>
+              <button data-start="startMovingRight" data-stop="stopMovingRight">
+                <img src="img/SVG/arrow-right.svg" alt="">
+              </button>
+            </div>
+            <div class="mobile-btns-right flex ">
+              <button data-start="startThrowing">
+                <img src="img/SVG/throw-mobile.svg" alt="">
+              </button>
+              <button data-start="startJumping" >
+                <img src="img/SVG/jump-mobile.svg" alt="">
+              </button>
+            </div>
+  
+          </div>
         </div>
-        <div id="mobileBtn-container" class="flex justify-space-between">
-          <div class="mobile-btns-left flex">
-            <button data-start="startMovingLeft" data-stop="stopMovingLeft">
-              <img src="img/SVG/arrow-left.svg" alt="">
-            </button>
-            <button data-start="startMovingRight" data-stop="stopMovingRight">
-              <img src="img/SVG/arrow-right.svg" alt="">
-            </button>
-          </div>
-          <div class="mobile-btns-right flex">
-            <button data-start="startThrowing" data-stop="stopThrowing">
-              <img src="img/SVG/throw-mobile.svg" alt="">
-            </button>
-            <button data-start="startJumping" data-stop="stopJumping">
-              <img src="img/SVG/jump-mobile.svg" alt="">
-            </button>
-          </div>
 
-        </div>
       </div>
 
       <div class="keyboard-container">
