--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="./models/sound-manager.class.js" defer></script>
     <script src="./models/statusbar.class.js" defer></script>
     <script src="./models/character.class.js" defer></script>
+    <script src="./models/thoughtBubble.class.js" defer></script>
     <script src="./models/chicken.class.js" defer></script>
     <script src="./models/chicken-small.class.js" defer></script>
     <script src="./models/coin.class.js" defer></script>
