--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <!-- onload="init()" --><!-- onload="startGame()" -->
     <div id="orientationMessage" style="display: none">
       <p>Please rotate your device to play the game.</p>
+      <a href="./impressum.html" class="position-absolute" style ="color:white; font-size:20px; font-weight:bold;left:30px; bottom:30px; text-decoration:none; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+        Impressum
+      </a>
     </div>
     <div id="canvas-container" class="canvas-container" style="display: flex">
       <div class="flex flex-column align-center">
@@ -200,6 +203,9 @@
           </div>
           
         </div>
+        <a href="impressum.html" id="impressum" class="position-absolute" style ="color:white; font-size:20px; font-weight:bold;left:30px; bottom:30px; text-decoration:none; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+          Impressum
+        </a>
         <div class="spinner" id="spinner">
           <img src="./img/6_salsa_bottle/salsa_bottle.png" alt="Loading Spinner" class="spinner-img">
         </div>
